# xilou_core

./: BUILD.gn  build_debug.sh  imported_library.gni
core/fpdfapi/edit/: cpdf_pagecontentgenerator.cpp
core/fpdfapi/page/: cpdf_textobject.h
core/fxcrt/: BUILD.gn  cfx_seekablestreamproxy.cpp  string_view_template.h
core/fxcrt/xml/: cfx_xmlelement.cpp  cfx_xmlelement.h  cfx_xmlinstruction.cpp
docs/: TODO_list.txt  信息技术应用创新 版式软件测试规范（标准草案）1201.doc
fpdfsdk/: cpdfsdk_renderpage.cpp  fpdf_edittext.cpp
jni/: BUILD.gn  build.sh  pdfium_jni.h  pdfium_test.cc  pdfium_test_write_helper.cc  pdfium_test_write_helper.h  rel_build.sh  rel_build2run.sh  run_java.sh
jni/com/kinggrid/krc/: KGDocument.java
ofd/: BUILD.gn  FIIO_Mem.cpp  FIIO_Mem.h  TODO.txt  cofd_common.h  cofd_document.cpp  cofd_document.h  cofd_document_unittest.cpp  cofd_ofd2pdf_unittest.cpp  cofd_ofdxml.cpp  cofd_ofdxml.h  cofd_ofdxml_unittest.cpp  cofd_package.cpp  cofd_package.h  cofd_package_unittest.cpp  cofd_page.cpp  cofd_page.h  cofd_page_annot.cpp  cofd_page_annot.h  cofd_page_signature.cpp  cofd_page_signature.h  cofd_pageobjectholder.cpp  cofd_pageobjectholder.h  cofd_parse_compositeobj.cpp  cofd_parse_imageobj.cpp  cofd_parse_pathobj.cpp  cofd_parse_shadingobj.cpp  cofd_parse_textobj.cpp  cofd_signature.cpp  cofd_signature.h  cofd_textobj.cpp  cofd_textobj.h  cofd_util.cpp  cofd_util.h  cofd_zipentry.cpp  cofd_zipentry.h  cofd_zipentry_unittest.cpp
ofd/constants/: page_object.cpp  page_object.h
ofd/oes/: oes_loader.cpp  oes_loader.h  oes_util.cpp  oes_util.h
ofd/render/: charposlist.cpp  charposlist.h  cofd_devicebuffer.cpp  cofd_devicebuffer.h  cofd_imageloader.cpp  cofd_imageloader.h  cofd_imagerenderer.cpp  cofd_imagerenderer.h  cofd_pagerendercontext.cpp  cofd_pagerendercontext.h  cofd_progressiverenderer.cpp  cofd_progressiverenderer.h  cofd_rendercontext.cpp  cofd_rendercontext.h  cofd_renderpage.cpp  cofd_renderpage.h  cofd_rendershading.cpp  cofd_rendershading.h  cofd_renderstatus.cpp  cofd_renderstatus.h  cofd_scaledrenderbuffer.cpp  cofd_scaledrenderbuffer.h  cofd_textrenderer.cpp  cofd_textrenderer.h
samples/: BUILD.gn  pdfium_test_write_helper.h
v8/test/js-perf-test/ClassFields/: evaluate-class.js
xilou_impl/: BUILD.gn  xilou_bitmap_saver.cpp  xilou_bitmap_saver.h  xilou_convert.cpp  xilou_convert2txt.cpp  xilou_image_png.cpp  xilou_image_png.h  xilou_impl.h  xilou_logger.cpp  xilou_ofdmerge.cpp  xilou_ofdmerge.h  xilou_pdfconvert.cpp  xilou_signature.cpp  xilou_signature_iface.h  xilou_view.cpp  xilou_xmldocument.cpp  xilou_xmldocument.h  xilou_xmlimageobj.cpp  xilou_xmlimageobj.h  xilou_xmlpackage.cpp  xilou_xmlpackage.h  xilou_xmlpage.cpp  xilou_xmlpage.h  xilou_xmlpathobj.cpp  xilou_xmlpathobj.h  xilou_xmlres.cpp  xilou_xmlres.h  xilou_xmltextobj.cpp  xilou_xmltextobj.h
xilou_public/: xilou_errcode.h
